--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,14 +11,7 @@ services:
       - DEBUG=false
       - JWT_HEADER=X-Pomerium-Jwt-Assertion
     healthcheck:
-      test:
-        [
-          "CMD",
-          "wget",
-          "--quiet",
-          "--spider",
-          "http://localhost:8090/api/health",
-        ]
+      test: ["CMD", "curl", "-f", "http://localhost:8090/api/health"]
       interval: 30s
       timeout: 10s
       retries: 3
